# vpn-rs

./: .gitignore  .tunnel_keys  CLAUDE.md  Cargo.toml  Cargo.tor.toml  Dockerfile.build  Dockerfile.cross  README.md  build-linux.sh  client.toml.example  client_ice.toml.example  install-vpn.ps1  install-vpn.sh  install.ps1  install.sh  receiver.toml.example  sender.toml.example  server.toml.example  server_ice.toml.example  setup-wireguard-test.sh  vpn_client.toml.example  vpn_client_ice.toml.example  vpn_server.toml.example  vpn_server_ice.toml.example
.claude/: settings.local.json
.github/workflows/: pages.yml  release.yml
container-deploy/: README.md
container-deploy/docker/: clients.txt.example  docker-compose-nostr.yml  docker-compose-tor-relay.yml  docker-compose.yml  relay.toml  torrc
container-deploy/kubernetes/: clients.txt.example  deployment-sidecar.yaml  tokens.txt.example  tor-relay.yaml  tunnel-deployment.yaml  tunnel-service.yaml
crates/tunnel-common/: Cargo.toml
crates/tunnel-common/src/: config.rs  lib.rs  net.rs
crates/tunnel-common/src/signaling/: codec.rs  mod.rs
crates/tunnel-ice/: Cargo.toml
crates/tunnel-ice/src/: lib.rs  secret.rs  tunnel_common.rs
crates/tunnel-ice/src/custom/: tunnel.rs
crates/tunnel-ice/src/nostr/: client.rs  mod.rs  server.rs
crates/tunnel-ice/src/signaling/: manual.rs  mod.rs  nostr.rs
crates/tunnel-ice/src/transport/: ice.rs  mux.rs  quic.rs
crates/tunnel-iroh/: Cargo.toml
crates/tunnel-iroh/src/: auth.rs  lib.rs  secret.rs  socks5_bridge.rs
crates/tunnel-iroh/src/iroh/: helpers.rs  multi_source.rs
crates/tunnel-iroh/src/iroh_mode/: endpoint.rs  helpers.rs  mod.rs  multi_source.rs
crates/tunnel-rs/: Cargo.toml
crates/tunnel-rs-ice/: Cargo.toml
crates/tunnel-rs-ice/src/: main.rs
crates/tunnel-rs-vpn/: Cargo.toml  README.md
crates/tunnel-rs-vpn-ice/: Cargo.toml
crates/tunnel-rs-vpn-ice/src/: main.rs
crates/tunnel-rs-vpn/src/: main.rs
crates/tunnel-rs/src/: main.rs  vpn_commands.rs
crates/tunnel-vpn/: Cargo.toml
crates/tunnel-vpn-ice/: Cargo.toml
crates/tunnel-vpn-ice/src/: client.rs  config.rs  error.rs  lib.rs  server.rs
crates/tunnel-vpn/src/: buffer.rs  client.rs  config.rs  device.rs  error.rs  keys.rs  lib.rs  lock.rs  packet.rs  server.rs  signaling.rs  tunnel.rs
crates/tunnel-vpn/src/nat64/: checksum.rs  clock.rs  mod.rs  state.rs  translator.rs
crates/vpn-common/: Cargo.toml
crates/vpn-common/src/: config.rs
crates/vpn-core/: Cargo.toml
crates/vpn-core/src/: client.rs  config.rs  device.rs  error.rs  lib.rs  lock.rs  server.rs  signaling.rs
crates/vpn-core/src/nat64/: mod.rs  state.rs  translator.rs
crates/vpn-iroh/: Cargo.toml
crates/vpn-iroh/src/: lib.rs  secret.rs
crates/vpn-iroh/src/iroh_mode/: endpoint.rs
crates/vpn-rs/: Cargo.toml  README.md
crates/vpn-rs/src/: main.rs
docs/: ALTERNATIVE-MODES.md  ARCHITECTURE-PORT-FORWARDING.md  ARCHITECTURE-VPN.md  ARCHITECTURE.md  MACOS_LOCALHOST_PROPOSAL.md  RATE_LIMITING_PROPOSAL.md  ROADMAP.md  SELF-HOSTING.md  TAYGA_NAT64.md  dcutr-signaling-research.md  iroh-relay-connection-trace.md  libp2p-research.md  potential-dcutr-improvements.md  tor-hidden-service-research.md  tor-hidden-service.md
examples/: README.md
examples/docker/: docker-compose-nostr.yml  docker-compose.yml
examples/kubernetes/: deployment-sidecar.yaml  tunnel-service.yaml
scripts/: README.md  build-tor.sh  echo_server.py  keys.sh  multi_receiver.sh  receiver.sh  sender.sh  test_tunnel.py
src/: arti_bridge.rs  auth.rs  config.rs  endpoint.rs  lib.rs  main.rs  main.rs.bak  secret.rs  socks5_bridge.rs  tunnel.rs  tunnel_common.rs
src/custom/: dcutr_client.rs  dcutr_server.rs  mod.rs  tunnel.rs
src/iroh/: endpoint.rs  helpers.rs  manual.rs  mod.rs  multi_source.rs  tunnel.rs
src/manual/: ice.rs  mod.rs  mux.rs  nostr_signaling.rs  quic.rs  signaling.rs
src/nostr/: client.rs  mod.rs  receiver.rs  sender.rs  server.rs  tunnel.rs
src/signaling/: codec.rs  manual.rs  mod.rs  nostr.rs
src/signaling/dcutr/: client.rs  framing.rs  mod.rs  protocol.rs  server.rs
src/transport/: ice.rs  mod.rs  mux.rs  quic.rs
src/vpn_common/: config.rs  mod.rs
src/vpn_core/: buffer.rs  client.rs  config.rs  device.rs  error.rs  lock.rs  mod.rs  offload.rs  server.rs  signaling.rs
src/vpn_core/nat64/: checksum.rs  mod.rs  state.rs  translator.rs
src/vpn_iroh/: auth.rs  secret.rs
src/vpn_iroh/iroh_mode/: endpoint.rs  mod.rs
test-scripts/: README.md  client.sh  echo_server.py  keys.sh  receiver.sh  sender.sh  server.sh  test_tunnel.py
