[package]
name = "tunnel-rs"
version = "0.1.25"
edition = "2021"
description = "TCP/UDP port forwarding through iroh P2P connections"

[lib]
name = "tunnel_rs"
path = "src/lib.rs"

[[bin]]
name = "tunnel-rs"
path = "src/main.rs"

[features]
default = ["ice"]
ice = ["str0m", "quinn", "rcgen", "stunclient", "get_if_addrs", "nostr-sdk"]
# Enable --relay-only CLI flag for testing. Requires iroh's test-utils feature.
# Build with: cargo build --features test-utils
test-utils = ["iroh/test-utils"]

[dependencies]
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.9"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32fast = "1"
toml = "0.8"
url = "2"
dirs = "6"
str0m = { version = "0.14.2", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rcgen = { version = "0.13", optional = true }
stunclient = { version = "0.4", optional = true }
sha2 = "0.10"
get_if_addrs = { version = "0.5", optional = true }
nostr-sdk = { version = "0.44.1", optional = true }
hex = "0.4"
ipnet = "2"
log = "0.4"
env_logger = "0.11"
tokio-socks = "0.5"

[dev-dependencies]
tempfile = "3.24.0"
