[workspace]
resolver = "2"
members = [
    "crates/tunnel-common",
    "crates/tunnel-iroh",
    "crates/tunnel-ice",
    "crates/tunnel-vpn",
    "crates/tunnel-vpn-ice",
    "crates/tunnel-rs",
    "crates/tunnel-rs-ice",
    "crates/tunnel-rs-vpn",
    "crates/tunnel-rs-vpn-ice",
]


[workspace.package]
version = "0.1.69-beta"

# [profile.release]
# strip = true
# lto = "fat"
# codegen-units = 1
# panic = "abort"
