[package]
name = "vpn-rs"
version = "0.0.3"
edition = "2021"
description = "IP-over-QUIC VPN tunnel via iroh P2P"
readme = "README.md"

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
dirs = "6"
env_logger = "0.11"
etherparse = "0.18"
fs2 = "0.4"
futures = "0.3"
ipnet = { version = "2", features = ["serde"] }
iroh = { version = "0.96.1", features = ["address-lookup-mdns"] }
iroh-quinn-proto = "0.15.0"
log = "0.4"
rand = "0.9"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.8"
tun = { version = "0.8", features = ["async"] }
url = "2"
webpki-roots = "1"

[dev-dependencies]
mock_instant = "0.5"
rand_chacha = "0.9"
tempfile = "3.24.0"
