[package]
name = "tunnel-common"
version = "0.1.26"
edition = "2021"
description = "Shared config and signaling for tunnel-rs"

[lib]
name = "tunnel_common"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
ipnet = "2"
dirs = "6"
base64 = "0.22"
crc32fast = "1"
tokio = { version = "1", features = ["rt", "time", "net", "io-util", "sync", "macros"] }
log = "0.4"
