[package]
name = "tunnel-ice"
version.workspace = true
edition = "2021"
description = "ICE modes for tunnel-rs"

[lib]
name = "tunnel_ice"
path = "src/lib.rs"

[dependencies]
tunnel-common = { path = "../tunnel-common" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand = "0.9"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
str0m = "0.14.2"
quinn = "0.11"
rcgen = "0.13"
stunclient = "0.4"
nostr-sdk = "0.44.1"
sha2 = "0.10"
hex = "0.4"
ipnet = "2"
url = "2"
log = "0.4"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
get_if_addrs = "0.5"
