[package]
name = "tunnel-iroh"
version = "0.1.26"
edition = "2021"
description = "Iroh mode for tunnel-rs"

[lib]
name = "tunnel_iroh"
path = "src/lib.rs"

[features]
# Enable --relay-only CLI flag for testing. Requires iroh's test-utils feature.
# Build with: cargo build --features test-utils
test-utils = ["iroh/test-utils"]

[dependencies]
tunnel-common = { path = "../tunnel-common" }
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand = "0.9"
base64 = "0.22"
log = "0.4"
url = "2"
tokio-socks = "0.5"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
