[package]
name = "tunnel-rs-ice"
version.workspace = true
edition = "2021"
description = "TCP/UDP port forwarding through ICE/QUIC"

[[bin]]
name = "tunnel-rs-ice"
path = "src/main.rs"

[dependencies]
tunnel-common = { path = "../tunnel-common" }
tunnel-ice = { path = "../tunnel-ice" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
