[package]
name = "tunnel-rs"
version = "0.1.27"
edition = "2021"
description = "TCP/UDP port forwarding through iroh P2P connections"

[[bin]]
name = "tunnel-rs"
path = "src/main.rs"

[features]
# Enable --relay-only CLI flag for testing. Requires iroh's test-utils feature.
# Build with: cargo build --features test-utils
test-utils = ["tunnel-iroh/test-utils"]

[dependencies]
tunnel-common = { path = "../tunnel-common" }
tunnel-iroh = { path = "../tunnel-iroh" }
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
