[package]
name = "tunnel-rs"
version.workspace = true
edition = "2021"
description = "TCP/UDP port forwarding through iroh P2P connections"

[[bin]]
name = "tunnel-rs"
path = "src/main.rs"

[dependencies]
tunnel-common = { path = "../tunnel-common" }
tunnel-iroh = { path = "../tunnel-iroh" }
iroh = { version = "0.96.0", features = ["address-lookup-mdns"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
