[package]
name = "tunnel-vpn"
version.workspace = true
edition = "2021"
description = "WireGuard-based VPN mode for tunnel-rs using boringtun"

[lib]
name = "tunnel_vpn"
path = "src/lib.rs"

[dependencies]
tunnel-common = { path = "../tunnel-common" }
tunnel-iroh = { path = "../tunnel-iroh" }

# WireGuard protocol implementation (userspace)
boringtun = "0.6"

# TUN device creation and handling (async support)
tun = { version = "0.8", features = ["async"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# iroh for signaling and NAT traversal
iroh = { version = "0.95.1", features = ["discovery-local-network"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
log = "0.4"

# Serialization for config/signaling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cryptographic randomness (0.8 for boringtun/x25519-dalek compatibility)
rand = "0.8"

# Base64 encoding
base64 = "0.22"

# IP address handling
ipnet = { version = "2", features = ["serde"] }

# Futures utilities
futures = "0.3"

# File locking (safe wrapper around flock/LockFile)
fs2 = "0.4"
