[package]
name = "vpn-iroh"
version.workspace = true
edition = "2021"
description = "Iroh mode for vpn-rs"

[lib]
name = "vpn_iroh"
path = "src/lib.rs"

[dependencies]
vpn-common = { path = "../vpn-common" }
iroh = { version = "0.96.0", features = ["address-lookup-mdns"] }
iroh-quinn-proto = "0.15.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand.workspace = true
base64 = "0.22"
log = "0.4"
url = "2"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
webpki-roots = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.24.0"
