[package]
name = "vpn-rs"
version.workspace = true
edition = "2021"
description = "IP-over-QUIC VPN tunnel via iroh P2P"
readme = "../../README.md"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
vpn-common = { path = "../vpn-common" }
vpn-iroh = { path = "../vpn-iroh" }
vpn-core = { path = "../vpn-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ipnet = "2"

# Performance: jemalloc allocator for better multi-threaded allocation
# Exclude musl (static linking issues) and Windows (not supported)
[target.'cfg(all(not(target_env = "musl"), not(target_os = "windows")))'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
