[package]
name = "vpn-rs"
version.workspace = true
edition = "2021"
description = "IP-over-QUIC VPN tunnel via iroh P2P"
readme = "../../README.md"

[dependencies]
vpn-common = { path = "../vpn-common" }
vpn-iroh = { path = "../vpn-iroh" }
vpn-core = { path = "../vpn-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
ipnet = "2"
